--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: aliceblue;
 }
 
 .Form{
@@ -13,12 +14,23 @@
 
 .textarea{
 overflow-y:scroll;
-min-width: 90vw;
-min-height: 90vh;
+width: 80vw;
+height: 80vh;
 border:solid black 1px;
 }
 
 .alert{
   width: 100vw;
   text-align: center;
+}
+
+.Submitbttn{
+  width: 100%;
+  border-radius: 1rem;
+  font-weight: bold;
+  font-size: large;
+}
+
+.Submitbttn:hover{
+  background-color: pink;
 }
