--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     background-color: aliceblue;
+    min-height: 100vh;
 }
 
 .Form{
@@ -11,12 +12,19 @@
   align-items: flex-start;
 }
 
-
 .textarea{
-overflow-y:scroll;
-width: 80vw;
-height: 80vh;
-border:solid black 1px;
+  width: 80vw;
+  height: 80vh;
+  background-color: pink;
+  color: white;
+  font-weight: 600;
+  border: solid black 4px;
+}
+
+.textarea:focus{
+  background-color: pink;
+  color: white;
+  border: solid pink 4px;
 }
 
 .alert{
